<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <EditText
    android:id="@+id/isbnET"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:hint="@string/enter_an_isbn"
    android:inputType="number"
    android:padding="@dimen/padding_6x"
    android:textSize="14sp"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/searchForBookButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/autofill_by_isbn"
    android:textColor="@color/white"
    android:backgroundTint="@color/colorPrimaryDark"
    app:layout_constraintStart_toEndOf="@id/isbnET"/>


  <EditText
    android:id="@+id/titleET"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:hint="@string/book_title"
    android:inputType="text"
    android:padding="@dimen/padding_6x"
    android:textSize="14sp"
    app:layout_constraintTop_toBottomOf="@id/isbnET" />



  <EditText
    android:id="@+id/authorET"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:hint="@string/book_author"
    android:inputType="text"
    android:padding="@dimen/padding_6x"
    android:textSize="14sp"
    app:layout_constraintTop_toBottomOf="@id/titleET" />


  <EditText
    android:id="@+id/pagesReadET"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:hint="@string/pages_read_entry"
    android:inputType="text"
    android:padding="@dimen/padding_6x"
    android:textSize="14sp"
    app:layout_constraintTop_toBottomOf="@id/authorET" />

  <Button
    android:id="@+id/saveBookmarkButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add_bookmark"
    android:textColor="@color/white"
    android:enabled="false"
    android:backgroundTint="@color/colorPrimaryDark"
    app:layout_constraintTop_toBottomOf="@id/pagesReadET"/>

</android.support.constraint.ConstraintLayout>